# src/config/swagger.yaml
@@ -260,6 +260,42 @@ paths:
                   message:
                     type: string
                     required: true
+  /google/auth:
+    post:
+      tags:
+        - Google Auth
+      requestBody:
+        content:
+          application/json:
+            example:
+                email: testuser@gmail.com
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  required: true
+      responses:
+        '200 / 201':
+          description: Authenticated successfully!
+          content:
+            application/json:
+              example:
+                token: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InRlc3RAdGVzdC5jb20iLCJ1c2VySWQiOiI2MmE0OGQ0OGQyYzM2YjM3MjQxYThmNWIiLCJpYXQiOjE2NTUyMzIzMjQsImV4cCI6MTY1NTIzNTkyNH0.VG9OmL4PLbeR2oGMTmhAFd09Sn4OTmaC6T9sXiwWXdA
+                id: '62a48d48d2c36b37241a8f5b'
+                username: testuser
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+                    required: true
+                  id:
+                    type: string
+                    required: true
+                  username:
+                    type: string
+                    required: true
   /password/send-recovery-link:
     post:
       tags:
